--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,10 +9,12 @@ good_lp = "1.10.0"
 identity-hash = "0.1.0"
 itertools = "0.13.0"
 mimalloc = {version = "0.1.43", default-features = false}
+partitions = "0.2.4"
 radsort = "0.1.1"
 rdx = "0.0.7"
 regex = "1.11.1"
 small-map = "0.1.3"
+smallvec = "1.13.2"
 tiny_sort = "1.0.5"
 
 [profile.release]
